--- a/contact.html
+++ b/contact.html
@@ -461,7 +461,7 @@
 <section class="pt-0">
   <div class="container">
     <div class="row align-items-center">
-      <div class="col-lg-8 col-md-12 ps-lg-10 order-1">
+      <div class="col-lg-8 col-md-12 ps-lg-10 ">
         <div class="theme-title">
           <h6>Get in Touch</h6>
           <h2 class="text-anime-style">Drop Us a Line ! </h2>
